test/cases/compile_errors/labeled_break_not_found.zig
export fn entry() void {
    blah: while (true) {
        while (true) {
            break :outer;
        }
    }
}

// error
//
// :4:20: error: label not found: 'outer'
